cdn updated, game works again

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
     <title>HW3: Crystals Collector Game</title>
@@ -54,7 +54,7 @@
             <div class="scoreBoard">
                 <br>
                 <div class="roundStatus">
-                    <h6>Try again</h6>
+                    <!-- <h6>Try again</h6> -->
                 </div>
                 <br>
                 <h5>Wins: <span id="wins">0</span></h5>
@@ -89,15 +89,16 @@
 
     <div class="row">
         <div class="col-4" id="yourScore">
-            <h1>10</h1>
+            <h1>0</h1>
         </div>
         <div class="col-4"></div>
         <div class="col-4"></div>
     </div>
-   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="assets/javascript/game.js"></script>
 
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+ 
 </body>
 
 </html>
